--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     </ul>
     </div>
     <div class="socials">
-      <ul class="header__menu">
+      <ul class="footer__menu">
         <li>
           <div class="first-img">
           <a href="https://twitter.com/i/flow/signup"><img src="assets/twitter.svg" width="24px" height="24px"></a>
