--- a/index.html
+++ b/index.html
@@ -355,6 +355,14 @@
     </div>
   </section>
   <script src="Js/script.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+      // Initialize AOS
+      AOS.init({
+          duration: 1000,
+          offset: 100,
+      });
+  </script>
 </body>
 </html>
  
