--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </div>
   </section>
   <script src="Js/script.js" type="module"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
       // Initialize AOS
       AOS.init({
