--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="header__nav">
       <div class="header__logo">
-        <h4 data-aos="fade-down">Sushiman</h4>
+        <h4 data-aos="zoom-in">Sushiman</h4>
         <div class="header__logo-overlay"></div>
       </div>
       <ul class="header__menu" data-aos="fade-down">
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="hero-content" >
-      <div class="hero-content-info" data-aos="fade-left">
+      <div class="hero-content-info" data-aos="zoom-in">
         <h1>Feel the taste of Japanese food</h1>
         <p>Feel the taste of the most popular Japanese food from anywhere and anytime</p>
         <div class="hero-content__buttons">
@@ -76,7 +76,7 @@
   <section class="about-us" id="about-us">
     <div class="left-content">
       <div class="top-cont">
-        <img src="assets/sushi-3.png" data-aos="fade-right">
+        <img src="assets/sushi-3.png" data-aos="zoom-in">
         <h2>
           あ<br>
           が<br>
@@ -87,7 +87,7 @@
         <button>Learn More<img src="assets/arrow-up-right.svg"></button>
       </div>
       <div class="bot-cont">
-        <img src="assets/sushi-2.png" data-aos="fade-right">
+        <img src="assets/sushi-2.png" data-aos="zoom-in">
         <h2>
           あ<br>
           が<br>
@@ -102,15 +102,15 @@
           bring true<br>
            Japanese flavours<br> to you.</h2>
     </div>
-    <div class="second-div" data-aos="fade-right">    
+    <div class="second-div" data-aos="zoom-in">    
       <p>We will continue to provide the experience of Omotenashi, the<br> Japanese mindset of hospitality, with our shopping and dining for<br> our customers</p>
     </div>
 
    </div>
   </section>
   <section class="popular-foods" id="menu">
-    <h2 class="popular-foods__title" data-aos="fade-right">Popular Food / こん</h2>
-    <div class="popular-foods-filters sushi-hide-scrollbar" data-aos="fade-right">
+    <h2 class="popular-foods__title" data-aos="zoom-in">Popular Food / こん</h2>
+    <div class="popular-foods-filters sushi-hide-scrollbar" data-aos="zoom-in">
       <button class="popular-foods__filter-btn active">All</button>
       <button class="popular-foods__filter-btn">
         <img src="assets/sushi-9.png">Sushi
@@ -183,7 +183,7 @@
   </section>
   
   <section class="first-content" id="food">
-    <div class="first" data-aos="fade-right">
+    <div class="first" data-aos="zoom-in">
       <p>What's trending | さよなら</p>
       <h2>Japanese Sushi</h2>
       <p>Feel the taste of the most delicious Sushi here.</p>
@@ -238,7 +238,7 @@
     </div>
     <div class="img-sec">
       <div class="image" >
-        <img src="assets/sushi-5.png" data-aos="fade-left">
+        <img src="assets/sushi-5.png" data-aos="zoom-in">
         <img src="assets/arrow-horizontal.svg" class="img-arrow-horizontal">
         <img src="assets/arrow-vertical.svg" class="img-arrow-vertical">
       </div>
@@ -248,7 +248,7 @@
   <section class="first-content">
     <div class="img-sec" >
       <div class="image">
-        <img src="assets/sushi-4.png" data-aos="fade-right">
+        <img src="assets/sushi-4.png" data-aos="zoom-in">
         <img src="assets/arrow-horizontal.svg" class="img-arrow-horizontal2">
         <img src="assets/arrow-vertical.svg" class="img-arrow-vertical">
       </div>
@@ -311,9 +311,9 @@
   <section class="offer-section" id="services">
     <h2 data-aos="flip-down">Get offers straight</h2>
     <h3 data-aos="flip-down"> to your  inbox</h3>
-    <p data-aos="fade-up">sign up for the Sushiman newsletter </p>
-    <input data-aos="fade-up" type="email" id="email" name="email" placeholder="Enter email address">
-    <button data-aos="fade-up" class="get-btn">
+    <p data-aos="zoom-in">sign up for the Sushiman newsletter </p>
+    <input data-aos="zoom-in" type="email" id="email" name="email" placeholder="Enter email address">
+    <button class="get-btn">
       Get started
     </button>
   </section>
