added navbar for mobile

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="icon" href="/assets/sushi-2.png">
   <link rel="stylesheet" href="Css/style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Sushiman</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
     <nav class="header__nav">
       <div class="header__logo">
         <h4 data-aos="zoom-in">Sushiman</h4>
+        <i class='bx bx-menu toggle-btn' id="btn"></i>
         <div class="header__logo-overlay"></div>
       </div>
       <ul class="header__menu" data-aos="fade-down">
@@ -33,6 +35,7 @@
             <img src="assets/search.svg">
           </li>
       </ul>
+      
       <!-- <ul class="header__menu-mobile">
         <li>
           <img src="assets/menu.svg">
@@ -367,6 +370,7 @@
         });
    </script>
   <script src="Js/script.js" type="module"></script>
+  
 </body>
 </html>
  
