--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             });
         });
    </script>
-  <script src="Js/script.js" type="module"></script>
+  <script src="Js/script.js"></script>
   
 </body>
 </html>
