dark mode added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="header__nav">
       <div class="header__logo">
         <h4 data-aos="zoom-in">Sushiman</h4>
+        <i class='bx bxs-moon' id="btn-moon"></i>
         <i class='bx bx-menu toggle-btn' id="btn"></i>
         <div class="header__logo-overlay"></div>
       </div>
@@ -31,9 +32,7 @@
           <li>
             <a href="#about-us">About Us</a>
           </li>
-          <li>
-            <img src="assets/search.svg">
-          </li>
+          
       </ul>
       
       <!-- <ul class="header__menu-mobile">
@@ -185,7 +184,7 @@
     </button>
   </section>
   
-  <section class="first-content" id="food">
+  <section class="first-content second-content" id="food">
     <div class="first" data-aos="zoom-in">
       <p>What's trending | さよなら</p>
       <h2>Japanese Sushi</h2>
@@ -248,7 +247,7 @@
     </div>
   </section>
   <!-- !!!!!!!!!!!!!!!!!!!!!!!!! -->
-  <section class="first-content">
+  <section class="first-content second-content">
     <div class="img-sec" >
       <div class="image">
         <img src="assets/sushi-4.png" data-aos="zoom-in">
