--- a/index.html
+++ b/index.html
@@ -319,6 +319,27 @@
       Get started
     </button>
   </section>
+  <!-- FREQUENTLY ASKED QUESTIONS -->
+  <section class="asked-questions">
+  <div class="main-container">
+    <h2>Frequently Asked Questions</h2>
+    <!-- FIRST!!!!!!!!!!!!!!! -->
+    <div class="content-container">
+      <div class="questions">What are the health benefits of eating sushi?</div>
+      <div class="answers">Sushi offers numerous health benefits due to its ingredients. The <strong>fish</strong> used in sushi is a great source of high-quality <strong>protein, omega-3 fatty acids,</strong> and various vitamins and minerals. Omega-3s are essential for <strong>heart health and brain function</strong>, while the seaweed (nori) used in sushi rolls is rich in iodine, which is crucial for thyroid function. Additionally, the rice provides a <strong>good source of energy</strong>, making sushi a balanced and nutritious meal option.</div>
+    </div>
+    <!-- SECOND!!!!!!!!!!!!!! -->
+    <div class="content-container">
+      <div class="questions"> How should I store sushi to keep it fresh?</div>
+      <div class="answers">To keep sushi fresh, it should be stored in an airtight <strong>container in the refrigerator</strong>. It's best consumed within 24 hours of preparation to ensure the best taste and quality. If you have leftover sushi, <strong>cover it with a damp cloth</strong> before sealing it in a container to keep the rice from drying out. Remember, sushi with <strong>raw fish</strong> should be eaten as soon as possible to avoid the risk of foodborne illnesses.</div>
+    </div>
+    <!-- THIRD!!!!!!!!!!!!!!!!!!! -->
+    <div class="content-container">
+      <div class="questions">What are the different types of sushi rolls?</div>
+      <div class="answers">There are <strong>several types of sushi rolls</strong>, each with unique characteristics. Maki rolls are the most common, <strong>with rice and fillings wrapped in seaweed</strong>. Nigiri features slices of raw fish pressed onto small beds of rice. Temaki rolls are <strong>hand-rolled cones</strong> of seaweed filled with rice and ingredients. Finally, Uramaki (inside-out rolls) have the rice on the outside, <strong>wrapping around the seaweed and fillings</strong>, offering a different texture and taste experience.</div>
+    </div>
+  </div>
+</section>
   <section class="footer">
     <h3><span>Sushi</span>man</h3>
     <div class="nav-links">
